--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@clack/core": "latest",
     "@clack/prompts": "latest",
     "@dqbd/tiktoken": "^1.0.2",
+    "@mistralai/mistralai": "^1.5.1",
     "@nexssp/os": "^2.0.35",
     "axios": "^1.3.5",
     "cleye": "^1.3.2",
